<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_1920_w">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/mail"
        android:textColor="@color/colorWhiteOpacity75"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_unread"
            android:textColor="#ff8da4b9"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNotRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="00"
            android:textColor="#ff8da4b9"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / "
            android:textColor="#ff8da4b9"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNotReadTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textColor="#ff8da4b9"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMailMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_limit"
            android:textColor="@color/colorWhiteOpacity50"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMailLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="99"
            android:textColor="@color/colorWhiteOpacity50"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="89dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorWhiteOpacity40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="60dp"
        android:background="@color/settings_layout_bg_f"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#26282d"
            android:gravity="center|left"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="@string/mail_date"
                    android:textColor="@color/colorWhiteOpacity50"
                    android:textSize="15dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="180dp"
                android:gravity="center|left"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="@string/mail_title"
                    android:textColor="@color/colorWhiteOpacity50"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llType"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/llID">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="@string/mail_type"
                    android:textColor="@color/colorWhiteOpacity50"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llID"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:text="@string/mail_id"
                    android:textColor="@color/colorWhiteOpacity50"
                    android:textSize="15dp" />



            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNoMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:text="@string/mail_nolist"
                android:textColor="@color/colorWhiteOpacity30"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/lvMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:listSelector="@drawable/button_item4" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLineBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorWhiteOpacity40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/llMailPageIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/tvMailPageIndex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="01"
            android:textColor="#ffffff"
            android:textSize="11dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="/"
            android:layout_marginLeft="3dp"
            android:textColor="@color/colorWhiteOpacity50"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/tvMailPageTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="01"
            android:layout_marginLeft="3dp"
            android:textColor="@color/colorWhiteOpacity50"
            android:textSize="11dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMailKeyBar"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="0dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/colorkey_r" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/mail_delete"
                android:textColor="#818181"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/colorkey_g" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/mail_delread"
                android:textColor="#818181"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBilingualNow"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/colorkey_y" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/mail_markread"
                android:textColor="#818181"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerInParent="true"
                android:background="@drawable/tvmail_key_ok"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/mail_read"
                android:textColor="#818181"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>