<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000">

    <LinearLayout
        android:layout_width="476dp"
        android:layout_height="211dp"
        android:background="#34363c"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/tutorial_popup_1"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="23dp"
             />

        <TextView
            android:id="@+id/tvLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="11.5dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:background="@color/colorWhiteOpacity10"
            android:textSize="20dp"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="0dp"
            android:orientation="vertical"
            android:gravity="center"
           >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_popup_2"
                android:textColor="#ffffff"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_popup_3"
                android:textColor="@color/colorWhiteOpacity50"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llConfirmPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            >

            <!-- Button
                android:id="@+id/btnTutorialDontShowAgain"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_item2"
                android:checked="true"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textAllCaps="false"
                android:text="@string/tutorial_dont_show_again"
                android:textColor="@color/state_selected_white_normal_b3ffffff"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnTutorialLearnMore"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:minWidth="98dp"
                android:background="@drawable/button_item2"
                android:checked="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textAllCaps="false"
                android:text="@string/tutorial_learn_more"
                android:textColor="@color/state_selected_white_normal_b3ffffff"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnTutorialCancel"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:minWidth="98dp"
                android:background="@drawable/button_item2"
                android:checked="true"
                android:paddingLeft="23.5dp"
                android:paddingRight="23.5dp"
                android:textAllCaps="false"
                android:text="@string/tutorial_cancel"
                android:textColor="@color/state_selected_white_normal_b3ffffff"
                android:textSize="16dp" /-->
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>